<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Encabezado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:orientation="horizontal"
        android:id="@+id/encabezado">
        <!--
            LinearLayout (horizontal) Imagen, numero de paginas
        -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_image_detail"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                tools:srcCompat="@drawable/ic_baseline_book_24" />

            <TextView
                android:id="@+id/num_page"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="15dp"
                android:text="@string/num_page">
            </TextView>
        </LinearLayout>

        <!--
            LinearLayout (vertical) titulo, autor,
            <LinearLayout (horizontal) precio y ranking>
            Boton
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/title_book"/>

            <TextView
                android:id="@+id/author_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:text="@string/author_book"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/price_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:text="@string/price"/>

                <RatingBar
                    android:id="@+id/ranking"
                    style="@android:style/Widget.Holo.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3"></RatingBar>
            </LinearLayout>

            <Button
                android:id="@+id/buy_Book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/buy"></Button>

        </LinearLayout>
    </LinearLayout>

    <!--Reseña-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_below="@+id/encabezado"
        android:layout_above="@+id/contenedorBtnAlumnosNota">

        <TextView
            android:id="@+id/review_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/review"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/contenedorBtnAlumnosNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAtras"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btnBackMenu"
            android:textColor="@color/white">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</RelativeLayout>

